--- a/docs/如何添加一个插件.md
+++ b/docs/如何添加一个插件.md
@@ -1,6 +1,11 @@
+1、新建 .NET Standard 类库项目，项目目录放置在Maple.Plugs目录下
+
+   类库名称格式建议 ： 公司名称.产品名称.模块名称
+
+2、编辑新建项目的csproj文件
+
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <!--<TargetFrameworks>netstandard2.0;netcoreapp2.0;net461</TargetFrameworks>-->
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netcoreapp2.0|AnyCPU'">
@@ -11,9 +16,6 @@
     <OutputPath>..\..\Maple.Web.App\Plugins\Maple.CAA</OutputPath>
     <OutDir>$(OutputPath)</OutDir>
   </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Maple.Web.Framework\Maple.Web.Framework.csproj" />
-  </ItemGroup>
   <!-- Build完成后清理重复的动态库 -->
   <UsingTask TaskName="ClearPluginsPathTask" AssemblyFile="..\..\Maple.Tools\Dll\Maple.BuildTask.dll" /> 
   <Target Name="MapleBuildTaskTarget" AfterTargets="Build">
