--- a/docs/如何添加一个插件.md
+++ b/docs/如何添加一个插件.md
@@ -4,21 +4,23 @@
 
 2、编辑新建项目的csproj文件
 
-  <Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-      <TargetFramework>netcoreapp2.0</TargetFramework>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netcoreapp2.0|AnyCPU'">
-      <OutputPath>..\..\Maple.Web.App\Plugins\Maple.CAA</OutputPath>
-      <OutDir>$(OutputPath)</OutDir>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp2.0|AnyCPU'">
-      <OutputPath>..\..\Maple.Web.App\Plugins\Maple.CAA</OutputPath>
-      <OutDir>$(OutputPath)</OutDir>
-    </PropertyGroup>
-    <!-- Build完成后清理重复的动态库 -->
-    <UsingTask TaskName="ClearPluginsPathTask" AssemblyFile="..\..\Maple.Tools\Dll\Maple.BuildTask.dll" /> 
-    <Target Name="MapleBuildTaskTarget" AfterTargets="Build">
-      <ClearPluginsPathTask WebHostPath="$([System.IO.Path]::GetFullPath('..\..\Maple.Web.App\bin\$(Configuration)'))" PluginPath="$([System.IO.Path]::GetFullPath('$(MSBuildProjectDirectory)\$(OutDir)'))" SaveLocalesFolders="true" />
-    </Target> 
-  </Project>
+''' 
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
+    <OutputPath>..\..\Maple.Web\Plugins\XXXXXXXXXX</OutputPath>
+    <OutDir>$(OutputPath)</OutDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
+    <OutputPath>..\..\Maple.Web\Plugins\XXXXXXXXXX</OutputPath>
+    <OutDir>$(OutputPath)</OutDir>
+  </PropertyGroup>
+  <!-- Build完成后清理重复的动态库 -->
+  <UsingTask TaskName="ClearPluginsPathTask" AssemblyFile="..\..\Maple.Tools\Build\Maple.BuildTask.dll" /> 
+  <Target Name="MapleBuildTaskTarget" AfterTargets="Build">
+    <ClearPluginsPathTask WebHostPath="$([System.IO.Path]::GetFullPath('..\..\Maple.Web\bin\$(Configuration)'))" PluginPath="$([System.IO.Path]::GetFullPath('$(MSBuildProjectDirectory)\$(OutDir)'))" SaveLocalesFolders="true" />
+  </Target> 
+</Project>
+'''
