--- a/docs/如何添加一个插件.md
+++ b/docs/如何添加一个插件.md
@@ -4,7 +4,7 @@
 
 2、编辑新建项目的csproj文件
 
-''' 
+''' 可以写注释
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
