--- a/docs/如何添加一个插件.md
+++ b/docs/如何添加一个插件.md
@@ -4,7 +4,7 @@
 
 2、编辑新建项目的csproj文件
 
-''' 可以写注释
+<code>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -23,4 +23,4 @@
     <ClearPluginsPathTask WebHostPath="$([System.IO.Path]::GetFullPath('..\..\Maple.Web\bin\$(Configuration)'))" PluginPath="$([System.IO.Path]::GetFullPath('$(MSBuildProjectDirectory)\$(OutDir)'))" SaveLocalesFolders="true" />
   </Target> 
 </Project>
-'''
+</code>
