继续插件框架移植

--- a/docs/如何添加一个插件.md
+++ b/docs/如何添加一个插件.md
@@ -24,3 +24,14 @@
   </Target> 
 </Project>
 </code>
+
+
+
+3、复制文件
+
+rd/s/q "$(TargetDir)Content"
+rd/s/q "$(TargetDir)Config"
+rd/s/q "$(TargetDir)Views"
+xcopy "$(SolutionDir)ST.SAM.Web.NancyPages\Content\*.*" "$(TargetDir)Content\" /s/d/r/y
+xcopy "$(SolutionDir)ST.SAM.Web.NancyPages\Config\*.*" "$(TargetDir)Config\" /s/d/r/y
+xcopy "$(SolutionDir)ST.SAM.Web.NancyPages\Views\*.*" "$(TargetDir)Views\" /s/d/r/y
