--- a/docs/如何添加一个插件.md
+++ b/docs/如何添加一个插件.md
@@ -1,9 +1,10 @@
-1、新建 .NET Standard 类库项目，项目目录放置在Maple.Plugs目录下
+﻿# 如何添加一个插件
+ 
+1. 新建 .NET Standard 类库项目，项目目录放置在Maple.Plugs目录下。类库名称格式建议 ： 公司名称.产品名称.模块名称
 
-   类库名称格式建议 ： 公司名称.产品名称.模块名称
+2. 编辑新建项目的csproj文件
 
-2、编辑新建项目的csproj文件
-
+``` xml
 <code>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
@@ -24,14 +25,14 @@
   </Target> 
 </Project>
 </code>
+```
+3. 复制文件
 
-
-
-3、复制文件
-
+```bat
 rd/s/q "$(TargetDir)Content"
 rd/s/q "$(TargetDir)Config"
 rd/s/q "$(TargetDir)Views"
 xcopy "$(SolutionDir)ST.SAM.Web.NancyPages\Content\*.*" "$(TargetDir)Content\" /s/d/r/y
 xcopy "$(SolutionDir)ST.SAM.Web.NancyPages\Config\*.*" "$(TargetDir)Config\" /s/d/r/y
 xcopy "$(SolutionDir)ST.SAM.Web.NancyPages\Views\*.*" "$(TargetDir)Views\" /s/d/r/y
+```
